testsuite/poke.pkl/assert-diag-3.pk
/* { dg-do compile } */

/* function argument 2 has the wrong type */

assert (2, 0);  /* { dg-error "" } */
